--- a/index.html
+++ b/index.html
@@ -1,2 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sleek Dynamic UI</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>My Dynamic UI Website</h1>
+    </header>
+    <main>
+        <div class="app-icons">
+            <a href="https://www.nvidia.com/en-us/geforce-now/" target="_blank">
+                <img src="geforce-now-icon.png" alt="GeForce NOW">
+            </a>
+            <a href="https://www.youtube.com/" target="_blank">
+                <img src="youtube-icon.png" alt="YouTube">
+            </a>
+            <a href="https://soundcloud.com/" target="_blank">
+                <img src="soundcloud-icon.png" alt="SoundCloud">
+            </a>
+            <a href="https://www.bing.com/" target="_blank">
+                <img src="bing-icon.png" alt="Bing">
+            </a>
+            <a href="https://www.android.com/" target="_blank">
+                <img src="android-icon.png" alt="Android OS">
+            </a>
+        </div>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
 
    
